<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.rednavis</groupId>
  <artifactId>showcase</artifactId>
  <packaging>war</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>Java EE Showcase Webapp</name>
  <url>http://maven.apache.org</url>

  <properties>
    <maven.compiler.target>1.8</maven.compiler.target>
    <maven.compiler.source>1.8</maven.compiler.source>
  </properties>

  <build>
    <defaultGoal>package tomee:run</defaultGoal>
    <finalName>javaee-showcase</finalName>
    <plugins>

      <plugin>
        <groupId>org.apache.tomee.maven</groupId>
        <artifactId>tomee-maven-plugin</artifactId>
        <version>8.0.1</version>
        <configuration>
          <context>ROOT</context>
          <reloadOnUpdate>true</reloadOnUpdate>
          <tomeeClassifier>plume</tomeeClassifier>
          <synchronization>
            <extensions>
              <extension>.class</extension>
            </extensions>
          </synchronization>
          <args>-Xmx1024m -XX:PermSize=256m</args>
          <removeDefaultWebapps>true</removeDefaultWebapps>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.2.3</version>
        <configuration>
          <failOnMissingWebXml>false</failOnMissingWebXml>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>javax</groupId>
      <artifactId>javaee-api</artifactId>
      <version>8.0.1</version>
      <scope>provided</scope>
    </dependency>

  </dependencies>

  <pluginRepositories>
    <pluginRepository>
      <id>central</id>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <url>https://repo1.maven.org/maven2/</url>
    </pluginRepository>
  </pluginRepositories>

  <repositories>
    <repository>
      <id>central</id>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <url>https://repo1.maven.org/maven2/</url>
    </repository>
    <repository>
      <id>jcenter</id>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <url>https://jcenter.bintray.com/</url>
    </repository>
  </repositories>
</project>